[package]
name = "llvm-wrapper"
version = "0.1.0"
authors = ["atil <atilkurtulmus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "110.0.0"
libc = "0.2.80"
regex = "1"
Inflector = "0.11.4"

[[bin]]
name="generator"
path="src/main.rs"