[package]
name = "llvm-wrapper"
version = "0.1.12"
authors = ["atil <atilkurtulmus@gmail.com>"]
edition = "2018"
description = "Safe llvm-sys wrapper"
license = "MIT"
repository = "https://github.com/atkurtul/llvm-wrapper"
crate-type = ["staticlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "120.0.0"
libc = "0.2.80"
regex = "1"
Inflector = "0.11.4"

# [lib]

# path = "src/lib.rs"

# [[bin]]
# name="generator"
# path="src/main.rs"